# dilos-artifact

./: .gitignore  README.md  bench-all.sh  bench.aifm.sh  bench.all.fastswap.sh  bench.dataframe.fastswap.sh  bench.gapbs.fastswap.sh  bench.kmeans.fastswap.sh  bench.quicksort.fastswap.sh  bench.redis.fastswap.sh  bench.seq.fastswap.sh  bench.snappy.fastswap.sh  build.aifm.sh  build.apps.fastswap.sh  build.sh  clean-app.sh  clean.sh  config.sh  debug.sh  download.dataset.sh  install-deps.sh  install-ofed.sh  install.deps.sh  install.kernel.fastswap.sh  install.ofed.sh  remote.sh  run.sh  setup-compute.sh  setup-remote.sh  setup.aifm.sh  setup.compute.fastswap.sh  setup.compute.sh  setup.lxc.sh  setup.remote.fastswap.sh  setup.remote.sh  trace.sh
aifm/aifm/: shared.sh
aifm/shenango/: build.sh  dpdk.sh  rdma-core.sh
apps/: build.dataframe.sh  build_type.mk
apps/dataframe/: Makefile  module.py  usr.manifest
apps/gapbs/: Makefile  module.py
apps/hashtable/: CMakeLists.txt  main.cpp  usr.manifest
apps/hashtable-osv/: CMakeLists.txt  Makefile  module.py  usr.manifest
apps/hashtable-osv/include/: assert.h  atomic.h  compiler.h  helpers.hpp  local_concurrent_hopscotch.hpp  slab.hpp  sync.h
apps/hashtable-osv/include/internal/: local_concurrent_hopscotch.ipp
apps/hashtable-osv/src/: local_concurrent_hopscotch.cpp  slab.cpp
apps/hashtable/include/: hash.hpp  helpers.hpp  local_concurrent_hopscotch.hpp  local_concurrent_hopscotch.ipp  slab.hpp  zipf.hpp  zipf.ipp
apps/hashtable/src/: MurmurHash3.cpp  init.cc  local_concurrent_hopscotch.cpp  slab.cpp
apps/kmeans/: .gitignore  GET  README  apt-modules  module.py  run.py  usr.manifest
apps/microbench/: .gitignore  CMakeLists.txt  Makefile  breakdown.cc  map.cc  module.py  quicksort.cc  rand.cc  seq.cc  sg.cc  sg2.cc
apps/perftest/: Makefile  build.sh  module.py  usr.manifest
apps/redis/: Makefile  module.py  redis.conf  usr.manifest
apps/seq/: Makefile  module.py  seq.cc  usr.manifest
apps/snappy/: CMakeLists.txt  Makefile  compress.cc  decompress.cc  helper.hh  module.py  setup.cc  usr.manifest
apps/test-ddc/: .gitignore  Makefile  ddc-malloc.c  ddc-malloc2.c  ddc-mlock.c  ddc-mmap.c  ddc-mmap2.c  ddc-mmap3.c  ddc-sg.c  ddc-test.c  module.py
dilos/: Makefile  config.json  loader.cc  runtime.cc  usr_rofs.manifest.skel
dilos/apps/: .gitignore  README.md  cmdline.sh  java_cmdline.sh
dilos/core/: app.cc  elf.cc  mempool.cc  mmu.cc
dilos/core-ddc/: alloc.cc  cleaner.hh  debug.cc  dev-vma.cc  elf.cc  eviction.cc  ibsysfs.cc  init.hh  malloc.cc  mmu-ext.cc  options.cc  page.cc  page.hh  pte.hh  sem.cc  spinlock_dbg.hh  stat.cc  tlb.hh  virtio-uverbs-trans.c  virtio-uverbs-trans.h  virtio-uverbs.cc  virtio-uverbs.hh
dilos/drivers/: virtio.hh
dilos/libc/: mman.cc  signal.cc
dilos/scripts/: build  convert  imgedit.py  libosv.py  loader.py  osv-version.sh  qemu-ifdown.sh  run.py
fastswap/: .gitignore
fastswap/drivers/: fastswap_rdma.c
fastswap/farmemserver/: .gitignore  rmserver.c
fastswap/linux/: .gitignore
mimalloc/: CMakeLists.txt
mimalloc-bitmap/: CMakeLists.txt
mimalloc-bitmap/include/: mimalloc-bm-option.h  mimalloc-internal.h  mimalloc-types.h  mimalloc.h
mimalloc-bitmap/src/: alloc-aligned.c  alloc.c  bitmap.c  bitmap.h  heap.c  init.c  os.c  page.c  segment.c  stats.c
mimalloc-bitmap/test/: test-stress.c
mimalloc/src/: init.c  os.c
mlnx-ofed-4.6/: .mlnx  RPM-GPG-KEY-Mellanox  common.pl  common_installers.pl  create_mlnx_ofed_installers.pl  mlnx_add_kernel_support.sh  mlnxofedinstall  uninstall.sh
mlnx-ofed-4.6/DEBS/: Packages  Packages.bz2  Release  Release.gpg  ar-mgr_1.0-0.42.g750eb1e.46101_amd64.deb  cc-mgr_1.0-0.41.g750eb1e.46101_amd64.deb  dapl2-utils_2.1.10mlnx-OFED.3.4.2.1.0.46101_amd64.deb  dump-pr_1.0-0.37.g750eb1e.46101_amd64.deb  hcoll_4.3.2708-1.46101_amd64.deb  ibacm-dev_41mlnx1-OFED.4.3.3.0.0.46101_amd64.deb  ibacm_41mlnx1-OFED.4.3.3.0.0.46101_amd64.deb  ibdump_5.0.0-3.46101_amd64.deb  ibsim-doc_0.7mlnx1-0.11.g85c342b.46101_all.deb  ibsim_0.7mlnx1-0.11.g85c342b.46101_amd64.deb  ibutils2_2.1.1-0.104.MLNX20190408.gb55795e.46101_amd64.deb  ibutils_1.5.7.1-0.12.gdcaeae2.46101_amd64.deb  ibverbs-utils_41mlnx1-OFED.4.6.0.4.1.46101_amd64.deb  infiniband-diags-compat_5.4.0.MLNX20190422.d1468cd-0.1.46101_amd64.deb  infiniband-diags-guest_5.4.0.MLNX20190422.d1468cd-0.1.46101_amd64.deb  infiniband-diags_5.4.0.MLNX20190422.d1468cd-0.1.46101_amd64.deb  iser-dkms_4.6-OFED.4.6.1.0.1.1.ga2cfe08_all.deb  isert-dkms_4.6-OFED.4.6.1.0.1.1.ga2cfe08_all.deb  kernel-mft-dkms_4.12.0-105_all.deb  knem-dkms_1.1.3.90mlnx1-OFED.4.4.2.5.2.1.g993678c_all.deb  knem_1.1.3.90mlnx1-OFED.4.4.2.5.2.1.g993678c_amd64.deb  libdapl-dev_2.1.10mlnx-OFED.3.4.2.1.0.46101_amd64.deb  libdapl2_2.1.10mlnx-OFED.3.4.2.1.0.46101_amd64.deb  libdisni-java-jni_1.9-OFED.4.5.0.0.6.46101_amd64.deb  libibcm-dev_41mlnx1-OFED.4.1.0.1.0.46101_amd64.deb  libibcm1_41mlnx1-OFED.4.1.0.1.0.46101_amd64.deb  libibdm1_1.5.7.1-0.12.gdcaeae2.46101_amd64.deb  libibmad-devel_5.4.0.MLNX20190423.1d917ae-0.1.46101_amd64.deb  libibmad-static_5.4.0.MLNX20190423.1d917ae-0.1.46101_amd64.deb  libibmad_5.4.0.MLNX20190423.1d917ae-0.1.46101_amd64.deb  libibumad-devel_43.1.1.MLNX20190422.87b4d9b-0.1.46101_amd64.deb  libibumad-static_43.1.1.MLNX20190422.87b4d9b-0.1.46101_amd64.deb  libibumad_43.1.1.MLNX20190422.87b4d9b-0.1.46101_amd64.deb  libibverbs-dev_41mlnx1-OFED.4.6.0.4.1.46101_amd64.deb  libibverbs1-dbg_41mlnx1-OFED.4.6.0.4.1.46101_amd64.deb  (+56 more)
prefetcher/: .clang-format  CMakeLists.txt
prefetcher/redis/: CMakeLists.txt  redis.c
qemu/: configure
rdma-core/: CMakeLists.txt  rdma-core.spec
remote/: CMakeLists.txt
remote/driver/: CMakeLists.txt  local.cc  rdma.cc
remote/server/: CMakeLists.txt  server.cc
scripts/: bench-dataframe-delayed.sh  bench-dataframe.sh  bench-gapbs.sh  bench-kmeans.sh  bench-quicksort.sh  bench-redis-sg.sh  bench-redis.sh  bench-seq.sh  bench-sg-nonosv.py  bench-sg-nonosv.sh  bench-sg.sh  bench-snappy.sh  config-bench.sh  config.py  download-dataset.sh  prepare-disk.sh  prepare-redis.sh
(+794 files in other folders)
